--- a/package.json
+++ b/package.json
@@ -10,18 +10,56 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
-    "@angular/core": "^19.2.0",
-    "@angular/forms": "^19.2.0",
-    "@angular/platform-browser": "^19.2.0",
-    "@angular/platform-browser-dynamic": "^19.2.0",
-    "@angular/router": "^19.2.0",
+    "@angular/animations": "~19.2.1",
+    "@angular/cdk": "^19.2.2",
+    "@angular/common": "~19.2.1",
+    "@angular/compiler": "~19.2.1",
+    "@angular/core": "~19.2.1",
+    "@angular/forms": "~19.2.1",
+    "@angular/platform-browser": "~19.2.1",
+    "@angular/platform-browser-dynamic": "~19.2.1",
+    "@angular/router": "~19.2.1",
+    "@softarc/native-federation-node": "^2.0.10",
+    "es-module-shims": "^1.5.12",
+    "@beefree.io/sdk": "^7.1.0-feat-exec-command.1",
+    "@ng-select/ng-select": "^14.0.2",
+    "@popperjs/core": "^2.11.8",
+    "@tiptap/core": "^2.11.5",
+    "@tiptap/extension-color": "^2.11.5",
+    "@tiptap/extension-font-family": "^2.11.5",
+    "@tiptap/extension-highlight": "^2.11.5",
+    "@tiptap/extension-image": "^2.11.5",
+    "@tiptap/extension-link": "^2.11.5",
+    "@tiptap/extension-text-align": "^2.11.5",
+    "@tiptap/extension-text-style": "^2.11.5",
+    "@tiptap/extension-typography": "^2.11.5",
+    "@tiptap/extension-underline": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
+    "@types/jquery": "^3.5.3",
+    "aws-sdk": "^2.1692.0",
+    "chart.js": "^4.4.7",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "ckeditor5": "^38.1.0",
+    "datebook": "^6.5.7",
+    "filestack-js": "^3.23.1",
+    "google-libphonenumber": "^3.2.10",
+    "intl-tel-input": "^17.0.8",
+    "jquery": "^3.5.1",
+    "js-base64": "^3.6.0",
+    "juice": "^8.0.0",
+    "jwt-decode": "^3.0.0",
+    "mixpanel-browser": "^2.55.1",
+    "ng2-charts": "^8.0.0",
+    "ngx-pagination": "^6.0.3",
+    "ngx-tiptap": "^12.0.0",
+    "node-forge": "^1.3.1",
+    "prosemirror-resizable-view": "^3.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular-architects/native-federation": "^19.0.16",
     "@angular-devkit/build-angular": "^19.2.3",
     "@angular/cli": "^19.2.3",
     "@angular/compiler-cli": "^19.2.0",
